# rust_develop_edu

./: README.md
Rust_outline/: 1. Введение в Rust.md  2. Переменные, изменяемость и типы данных.md  3. Функции и комментарии.md  4. Управляющие конструкции.md  5. Владение и заимствование.md
Rust_projects/project1_todo_list/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  deploy.sh  docker-compose.yml  setup.sh
Rust_projects/project1_todo_list/scripts/: backup.sh
Rust_projects/project1_todo_list/src/: config.rs  main.rs  reminder_system.rs
Rust_projects/project1_todo_list/src/handlers/: callbacks.rs  commands.rs  messages.rs  mod.rs
Rust_projects/project1_todo_list/src/models/: mod.rs  reminder.rs  todo.rs  user.rs
Rust_projects/project1_todo_list/src/storage/: json.rs  memory.rs  mod.rs  postgres.rs
Rust_projects/project1_todo_list/src/utils/: keyboard.rs  mod.rs  parser.rs  validation.rs
