[package]
name = "telegram_todo_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros", "ctrlc_handler"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
pretty_env_logger = "0.5"
log = "0.4"
dotenv = "0.15"
dptree = "0.3"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
regex = "1.0"